2007-02-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c: when multi-line strings end up
	being passed to the statusbar, only show the first line.

2007-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff.c: added CCITT Group 3 and 4 compression
	schemes to TIFF save plug-in. These modes are selectable for
	indexed image with a b/w colormap only. Fixes bug #162119 with the
	help of Manfred Joerg.

2007-02-13  Raphaël Quinet  <raphael@gimp.org>

	* modules/gimpinputdevicestore.c (gimp_input_device_store_new):
	fix function prototype for when libhal is not available.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c: update the progress less often.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.[ch]
	* modules/controller_linux_input.c: improved error handling.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.c: keep devices sorted alphabetically.

2007-02-13  Michael Natterer  <mitch@gimp.org>

	* modules/gimpinputdevicestore.[ch]: made dynamically loadable
	using GTypeModule.

	* modules/controller_linux_input.c (gimp_module_register):
	register the new dynamic type.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/controller_linux_input.c (key_events): corrected string
	(bug #407214).

2007-02-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollerlist.c (gimp_controller_list_edit_clicked):
	don't use button as parent widget, it might be NULL.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.[ch]: added signals "device-added"
	and "device-removed".

	* modules/controller_linux_input.c: allow to hot-plug the
	configured input device.

2007-02-12  Mukund Sivaraman <muks@mukund.org>

	* plug-ins/imagemap/imap_cmd_guides.c
	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_main.h
	* plug-ins/imagemap/imap_menu.c
	* plug-ins/imagemap/imap_object.c
	* plug-ins/imagemap/imap_preferences.h